Добелана страница about Us и доделан фильтр на главной странице

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 						<a class="header__menu-link" href="index.html">Home+</a>
 					</li>
 					<li class="header__menu-item">
-						<a class="header__menu-link" href="about.html">About</a>
+						<a class="header__menu-link" href="aboutUs.html">About</a>
 					</li>
 					<li class="header__menu-item">
 						<a class="header__menu-link" href="services.html">Services</a>
@@ -134,14 +134,14 @@
 			<div class="container productsWeek__container">
 				<h2 class="productsWeek__title section-title">Products of the week</h2>
 				<div class="productsWeek__filters">
-					<button class="productsWeek__filters-btn productsWeek__filters-btn--active">All</button>
-					<button class="productsWeek__filters-btn productsWeek__filters-btn">Furnitures</button>
-					<button class="productsWeek__filters-btn productsWeek__filters-btn">Chairs</button>
-					<button class="productsWeek__filters-btn productsWeek__filters-btn">Lighting</button>
-					<button class="productsWeek__filters-btn productsWeek__filters-btn">Decor</button>
+					<button class="productsWeek__filters-btn filters-btn--active">All</button>
+					<button class="productsWeek__filters-btn ">Furnitures</button>
+					<button class="productsWeek__filters-btn ">Chairs</button>
+					<button class="productsWeek__filters-btn ">Lighting</button>
+					<button class="productsWeek__filters-btn ">Decor</button>
 				</div>
 				<div class="productsWeek__items">
-					<div class="productsWeek__item">
+					<div class="productsWeek__item" data-f="furnitures">
 						<div class="productsWeek__item-top">
 							<img class="productsWeek__item-img" src="images/dest/productsWeek/1.png" alt="productsWeek">
 							<div class="productsWeek__item-boxLink">
@@ -174,7 +174,7 @@
 							<p class="productsWeek__item-price">$29.00</p>
 						</div>
 					</div>
-					<div class="productsWeek__item">
+					<div class="productsWeek__item" data-f="furnitures">
 						<div class="productsWeek__item-top">
 							<img class="productsWeek__item-img" src="images/dest/productsWeek/2.png" alt="productsWeek">
 							<div class="productsWeek__item-boxLink">
@@ -207,7 +207,7 @@
 							<p class="productsWeek__item-price">$29.00</p>
 						</div>
 					</div>
-					<div class="productsWeek__item">
+					<div class="productsWeek__item" data-f="chairs">
 						<div class="productsWeek__item-top">
 							<img class="productsWeek__item-img" src="images/dest/productsWeek/3.png" alt="productsWeek">
 							<div class="productsWeek__item-boxLink">
@@ -240,7 +240,7 @@
 							<p class="productsWeek__item-price">$29.00</p>
 						</div>
 					</div>
-					<div class="productsWeek__item">
+					<div class="productsWeek__item" data-f="chairs">
 						<div class="productsWeek__item-top">
 							<img class="productsWeek__item-img" src="images/dest/productsWeek/4.png" alt="productsWeek">
 							<div class="productsWeek__item-boxLink">
@@ -273,7 +273,7 @@
 							<p class="productsWeek__item-price">$29.00</p>
 						</div>
 					</div>
-					<div class="productsWeek__item">
+					<div class="productsWeek__item" data-f="lighting">
 						<div class="productsWeek__item-top">
 							<img class="productsWeek__item-img" src="images/dest/productsWeek/5.png" alt="productsWeek">
 							<div class="productsWeek__item-boxLink">
@@ -306,7 +306,7 @@
 							<p class="productsWeek__item-price">$29.00</p>
 						</div>
 					</div>
-					<div class="productsWeek__item">
+					<div class="productsWeek__item" data-f="lighting">
 						<div class="productsWeek__item-top">
 							<img class="productsWeek__item-img" src="images/dest/productsWeek/6.png" alt="productsWeek">
 							<div class="productsWeek__item-boxLink">
@@ -339,7 +339,7 @@
 							<p class="productsWeek__item-price">$29.00</p>
 						</div>
 					</div>
-					<div class="productsWeek__item">
+					<div class="productsWeek__item" data-f="decor">
 						<div class="productsWeek__item-top">
 							<img class="productsWeek__item-img" src="images/dest/productsWeek/7.png" alt="productsWeek">
 							<div class="productsWeek__item-boxLink">
@@ -372,7 +372,7 @@
 							<p class="productsWeek__item-price">$29.00</p>
 						</div>
 					</div>
-					<div class="productsWeek__item">
+					<div class="productsWeek__item" data-f="decor">
 						<div class="productsWeek__item-top">
 							<img class="productsWeek__item-img" src="images/dest/productsWeek/8.png" alt="productsWeek">
 							<div class="productsWeek__item-boxLink">
@@ -444,40 +444,40 @@
 					New Desing
 				</h3>
 				<div class="productsWeek__filters">
-					<button class="productsWeek__filters-btn productsWeek__filters-btn--active">All</button>
-					<button class="productsWeek__filters-btn productsWeek__filters-btn">Furnitures</button>
-					<button class="productsWeek__filters-btn productsWeek__filters-btn">Chairs</button>
-					<button class="productsWeek__filters-btn productsWeek__filters-btn">Lighting</button>
-					<button class="productsWeek__filters-btn productsWeek__filters-btn">Decor</button>
+					<button class="productsWeek__filters-btn filters-btn--active">All</button>
+					<button class="productsWeek__filters-btn">Furnitures</button>
+					<button class="productsWeek__filters-btn">Chairs</button>
+					<button class="productsWeek__filters-btn">Lighting</button>
+					<button class="productsWeek__filters-btn">Decor</button>
 				</div>
 				<div class="productsNew__items">
 					<a class="productsNew__item" href="#"
-						style="background-image: url('images/dest/productsNew/1.png');">
+						style="background-image: url('images/dest/productsNew/1.png');" data-f="furnitures">
 						<h4 class="productsNew__item-title">Beat Flat Pendant Black</h4>
 						<span class="productsNew__item-type">Classic</span>
 					</a>
 					<a class="productsNew__item" href="#"
-						style="background-image: url('images/dest/productsNew/2.png');">
+						style="background-image: url('images/dest/productsNew/2.png');" data-f="furnitures">
 						<h4 class="productsNew__item-title">Lampe Sur Pieds Bamboo</h4>
 						<span class="productsNew__item-type">Classic</span>
 					</a>
 					<a class="productsNew__item" href="#"
-						style="background-image: url('images/dest/productsNew/3.png');">
+						style="background-image: url('images/dest/productsNew/3.png');" data-f="lighting">
 						<h4 class="productsNew__item-title">Rattan Rocking Chair</h4>
 						<span class="productsNew__item-type">Classic</span>
 					</a>
 					<a class="productsNew__item" href="#"
-						style="background-image: url('images/dest/productsNew/4.png');">
+						style="background-image: url('images/dest/productsNew/4.png');" data-f="decor">
 						<h4 class="productsNew__item-title">Rattan Rocking Chair</h4>
 						<span class="productsNew__item-type">Classic</span>
 					</a>
 					<a class="productsNew__item" href="#"
-						style="background-image: url('images/dest/productsNew/5.png');">
+						style="background-image: url('images/dest/productsNew/5.png');" data-f="chairs">
 						<h4 class="productsNew__item-title">Rattan Rocking Chair</h4>
 						<span class="productsNew__item-type">Classic</span>
 					</a>
 					<a class="productsNew__item" href="#"
-						style="background-image: url('images/dest/productsNew/6.png');">
+						style="background-image: url('images/dest/productsNew/6.png');" data-f="chairs">
 						<h4 class="productsNew__item-title">Beat Flat Pendant Black</h4>
 						<span class="productsNew__item-type">Classic</span>
 					</a>
