--- a/app/page.html
+++ b/app/page.html
@@ -2,159 +2,167 @@
 <html lang="en">
 
 <head>
-       <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link rel="stylesheet" href="css/style.min.css">
-       <title>Glee</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.min.css">
+	<title>Glee</title>
 </head>
 
 <body>
-       <header class="header">
-              <div class="header__container">
-                     <a href="index.html" class="logo">
-                            <img class="logo__image" src="images/dest/logo.png" alt="logotype">
-                     </a>
-                     <nav class="header__menu">
-                            <ul class="header__menu-list">
-                                   <li class="header__menu-item">
-                                          <a class="header__menu-link" href="index.html">Home+</a>
-                                   </li>
-                                   <li class="header__menu-item">
-                                          <a class="header__menu-link" href="about.html">About</a>
-                                   </li>
-                                   <li class="header__menu-item">
-                                          <a class="header__menu-link" href="services.html">Services</a>
-                                   </li>
-                                   <li class="header__menu-item">
-                                          <a class="header__menu-link" href="pages.html">Pages+</a>
-                                   </li>
-                                   <li class="header__menu-item">
-                                          <a class="header__menu-link" href="news.html">News</a>
-                                   </li>
-                                   <li class="header__menu-item">
-                                          <a class="header__menu-link" href="contact.html">Contact</a>
-                                   </li>
-                            </ul>
-                     </nav>
-                     <div class="header__nav">
-                            <form class="header-search" action="#">
-                                   <input class="header-search__input" type="text">
-                                   <button class="header-search__btn" type="submit"></button>
-                            </form>
-                            <div class="header__nav-box">
-                                   <a class="header__nav-favorites" href="#">
-                                          <span class="header__nav-counter">0</span>
-                                   </a>
-                                   <a class="header__nav-basket" href="#">
-                                          <span class="header__nav-counter">0</span>
-                                   </a>
-                            </div>
-                            <button class="burger-menu"></button>
-                     </div>
-              </div>
-       </header>
+	<header class="header">
+		<div class="wrapper header__container">
+			<a href="index.html" class="logo">
+				<img class="logo__image" src="images/dest/logo.png" alt="logotype">
+			</a>
+			<nav class="header__menu">
+				<ul class="header__menu-list">
+					<li class="header__menu-item">
+						<a class="header__menu-link" href="index.html">Home+</a>
+					</li>
+					<li class="header__menu-item">
+						<a class="header__menu-link" href="about.html">About</a>
+					</li>
+					<li class="header__menu-item">
+						<a class="header__menu-link" href="services.html">Services</a>
+					</li>
+					<li class="header__menu-item">
+						<a class="header__menu-link" href="pages.html">Pages+</a>
+					</li>
+					<li class="header__menu-item">
+						<a class="header__menu-link" href="news.html">News</a>
+					</li>
+					<li class="header__menu-item">
+						<a class="header__menu-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="header__nav">
+				<form class="header-search" action="#">
+					<input class="header-search__input" type="text">
+					<button class="header-search__btn" type="submit"></button>
+				</form>
+				<div class="header__nav-box">
+					<a class="header__nav-favorites" href="#">
+						<span class="header__nav-counter">0</span>
+					</a>
+					<a class="header__nav-basket" href="#">
+						<span class="header__nav-counter">0</span>
+					</a>
+				</div>
+				<button class="burger-menu"></button>
+			</div>
+		</div>
+	</header>
 
-       <main class="main">
-              cc           
-              
-       </main>
+	<main class="main">
+		<div class="breadcrumbs">
+			<div class="breadcrumbs__title">
+				About Us
+			</div>
+			<div class="breadcrumbs-nav">
+				<a href="index.html" class="breadcrumbs-nav__link">Home</a>
+				<span class="breadcrumbs-nav__link">About Us</span>
+			</div>
+		</div>
 
-       <footer class="footer">
-              <div class="container">
-                     <div class="footer__inner">
-                            <div class="footer__content">
-                                   <div class="footer-info">
-                                          <a href="index.html" class="logo">
-                                                 <img class="logo__image" src="images/dest/logo.png" alt="logotype">
-                                          </a>
-                                          <address class="footer-info__address">
-                                                 <span class="footer-info__title">
-                                                        ADDRESS:
-                                                 </span> 4772 Wines Lane <br>
-                                                 Houston, TX 77032
-                                          </address>
-                                          <a class="footer-info__link" href="tel:+8323475843">
-                                                 <span class="footer-info__title">Telephone:</span> +832-347-5843
-                                          </a>
-                                          <a class="footer-info__link" href="mailto:contact@Glee.com">
-                                                 <span class="footer-info__title">Email:</span> contact@Glee.com
-                                          </a>
-                                   </div>
-                                   <div class="footer-items">
-                                          <ul class="footer-items__list">
-                                                 <li class="footer-items__title">
-                                                        Services
-                                                 </li>
-                                                 <li class="footer-items__list-item">
-                                                        <a class="footer-items__list-link" href="#">About us</a>
-                                                 </li>
-                                                 <li class="footer-items__list-item">
-                                                        <a class="footer-items__list-link" href="#">Return Policy</a>
-                                                 </li>
-                                                 <li class="footer-items__list-item">
-                                                        <a class="footer-items__list-link" href="#">Our Blog</a>
-                                                 </li>
-                                                 <li class="footer-items__list-item">
-                                                        <a class="footer-items__list-link" href="#">Contact Us</a>
-                                                 </li>
-                                                 <li class="footer-items__list-item">
-                                                        <a class="footer-items__list-link" href="#">Terms & Condition</a>
-                                                 </li>
-                                          </ul>
-                                          <ul class="footer-items__list">
-                                                 <li class="footer-items__title">
-                                                        Account
-                                                 </li>
-                                                 <li class="footer-items__list-item">
-                                                        <a class="footer-items__list-link" href="#">Your Accout</a>
-                                                 </li>
-                                                 <li class="footer-items__list-item">
-                                                        <a class="footer-items__list-link" href="#">Checkout</a>
-                                                 </li>
-                                                 <li class="footer-items__list-item">
-                                                        <a class="footer-items__list-link" href="#">Login</a>
-                                                 </li>
-                                                 <li class="footer-items__list-item">
-                                                        <a class="footer-items__list-link" href="#">Register</a>
-                                                 </li>
-                                          </ul>
-                                          <div class="footer-items__form">
-                                                 <h4 class="footer-items__title">newsletter</h4>
-                                                 <p class="footer-items__text">
-                                                        Subscribe by our newsletter and get update protidin.
-                                                 </p>
-                                                 <form class="footer-form"action="#">
-                                                        <input class="footer-form__input" type="text" placeholder="Email address">
-                                                        <button class="footer-form__btn link-btn" type="submit">Subscribe</button>
-                                                 </form>
-                                          </div>
-                                          
-                                   </div>
-                            </div>
-                            <div class="footer__bottom">
-                                   <p class="footer__copy">
-                                          ©2020 CopyRight Example. All rights reserved. 
-                                   </p>
-                                   <ul class="footer-nav">
-                                          <li class="footer-nav__item">
-                                                 <a href="#" class="footer-nav__link">Home</a>
-                                          </li>
-                                          <li class="footer-nav__item">
-                                                 <a href="#" class="footer-nav__link">About</a>
-                                          </li>
-                                          <li class="footer-nav__item">
-                                                 <a href="#" class="footer-nav__link">Blog</a>
-                                          </li>
-                                          <li class="footer-nav__item">
-                                                 <a href="#" class="footer-nav__link">Contact</a>
-                                          </li>
-                                   </ul>
-                            </div>
-                     </div>
-              </div>
-       </footer>
+	</main>
 
-       <script src="js/main.min.js"></script>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__inner">
+				<div class="footer__content">
+					<div class="footer-info">
+						<a href="index.html" class="logo">
+							<img class="logo__image" src="images/dest/logo.png" alt="logotype">
+						</a>
+						<address class="footer-info__address">
+							<span class="footer-info__title">
+								ADDRESS:
+							</span> 4772 Wines Lane <br>
+							Houston, TX 77032
+						</address>
+						<a class="footer-info__link" href="tel:+8323475843">
+							<span class="footer-info__title">Telephone:</span> +832-347-5843
+						</a>
+						<a class="footer-info__link" href="mailto:contact@Glee.com">
+							<span class="footer-info__title">Email:</span> contact@Glee.com
+						</a>
+					</div>
+					<div class="footer-items">
+						<ul class="footer-items__list">
+							<li class="footer-items__title">
+								Services
+							</li>
+							<li class="footer-items__list-item">
+								<a class="footer-items__list-link" href="#">About us</a>
+							</li>
+							<li class="footer-items__list-item">
+								<a class="footer-items__list-link" href="#">Return Policy</a>
+							</li>
+							<li class="footer-items__list-item">
+								<a class="footer-items__list-link" href="#">Our Blog</a>
+							</li>
+							<li class="footer-items__list-item">
+								<a class="footer-items__list-link" href="#">Contact Us</a>
+							</li>
+							<li class="footer-items__list-item">
+								<a class="footer-items__list-link" href="#">Terms & Condition</a>
+							</li>
+						</ul>
+						<ul class="footer-items__list">
+							<li class="footer-items__title">
+								Account
+							</li>
+							<li class="footer-items__list-item">
+								<a class="footer-items__list-link" href="#">Your Accout</a>
+							</li>
+							<li class="footer-items__list-item">
+								<a class="footer-items__list-link" href="#">Checkout</a>
+							</li>
+							<li class="footer-items__list-item">
+								<a class="footer-items__list-link" href="#">Login</a>
+							</li>
+							<li class="footer-items__list-item">
+								<a class="footer-items__list-link" href="#">Register</a>
+							</li>
+						</ul>
+						<div class="footer-items__form">
+							<h4 class="footer-items__title">newsletter</h4>
+							<p class="footer-items__text">
+								Subscribe by our newsletter and get update protidin.
+							</p>
+							<form class="footer-form" action="#">
+								<input class="footer-form__input" type="text" placeholder="Email address">
+								<button class="footer-form__btn link-btn" type="submit">Subscribe</button>
+							</form>
+						</div>
+
+					</div>
+				</div>
+				<div class="footer__bottom">
+					<p class="footer__copy">
+						©2020 CopyRight Example. All rights reserved.
+					</p>
+					<ul class="footer-nav">
+						<li class="footer-nav__item">
+							<a href="#" class="footer-nav__link">Home</a>
+						</li>
+						<li class="footer-nav__item">
+							<a href="#" class="footer-nav__link">About</a>
+						</li>
+						<li class="footer-nav__item">
+							<a href="#" class="footer-nav__link">Blog</a>
+						</li>
+						<li class="footer-nav__item">
+							<a href="#" class="footer-nav__link">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<script src="js/main.min.js"></script>
 </body>
 
 </html>
